--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1,6 +1,8 @@
-# Change Log
+---
+title: 'Change Log'
+---
 
-## v0.3.x
+## v0.3
 
 Firstly, thanks for using atopile! It's been a ride, and we're glad you're here. 🙌
 
@@ -8,8 +10,8 @@ Firstly, thanks for using atopile! It's been a ride, and we're glad you're here.
 
 Add `--help` after any command to see new options in the CLI. This is always the most accurate source of information.
 
-| Old | New |
-|-----|-----|
+| Old                    | New                    |
+| ---------------------- | ---------------------- |
 | `ato install --jlcpcb` | `ato create component` |
 
 
