--- a/essentials/1-the-ato-language.mdx
+++ b/essentials/1-the-ato-language.mdx
@@ -1,5 +1,5 @@
 ---
-title: '1. Basics of the `ato` language'
+title: '1. `ato` Language'
 description: "`ato` is a domain specific language (DSL) for describing electronic circuit boards. It's heavily inspired by, and attempts to largely follow the syntax of Python 🐍 for consistency and familiarity."
 icon: 'atom'
 ---
