--- a/essentials/2-the-ato-compiler.mdx
+++ b/essentials/2-the-ato-compiler.mdx
@@ -1,5 +1,5 @@
 ---
-title: '2. The `ato` compiler'
+title: '2. `ato` Compiler'
 description: 'The `ato` command line interface is the main way to interact with atopile.'
 icon: 'terminal'
 ---
