--- a/essentials/3-create-component.mdx
+++ b/essentials/3-create-component.mdx
@@ -1,7 +1,7 @@
 ---
-title: '3. `ato create component`'
+title: '3. Create a component'
 description: 'This embedded tool will help template `ato` code based on a component. Today, it supports JLCPCB components.'
-icon: 'plus-circle'
+icon: 'plus'
 ---
 
 # 3. `ato create component`
@@ -21,7 +21,9 @@ You'll be prompted for a search term of a component. This may be:
 
 Enter `C7426` and press enter.
 
-![ato create component](assets/ato-create-component-search.png)
+<Frame caption="ato create component search">
+  <img src="/assets/ato-create-component-search.png" alt="ato create component search prompt" />
+</Frame>
 
 Go ahead and tap `Enter` through the default options.
 
