--- a/atopile/changelog.mdx
+++ b/atopile/changelog.mdx
@@ -1,8 +1,11 @@
 ---
 title: 'Change Log'
+icon: 'rectangle-history'
 ---
 
-## v0.3
+{/* https://www.mintlify.com/docs/content/components/update */}
+
+<Update label="v0.3" description="A big release with a lot of new infrastructure">
 
 Firstly, thanks for using atopile! It's been a ride, and we're glad you're here. 🙌
 
@@ -37,3 +40,5 @@ This vastly improves our ability to version and iterate on the standard library,
 See [`library`](https://github.com/atopile/atopile/tree/main/src/faebryk/library) for the latest and greatest.
 
 It should be better documented. If this is important for you, please vote on the issue: #936
+
+</Update>
