--- a/atopile/essentials/2-the-ato-compiler.mdx
+++ b/atopile/essentials/2-the-ato-compiler.mdx
@@ -42,7 +42,7 @@ Add `--help` to the application/command/subcommand to get more information at an
     ato -v build
     ```
 
-## [Build Process](#build-process) {: #build-process }
+## Build Process
 
 As a rough overview, here's what happens when you run `ato build`:
 
