--- a/atopile/essentials/4-packages.mdx
+++ b/atopile/essentials/4-packages.mdx
@@ -1,7 +1,7 @@
 ---
 title: '4. Packages'
 description: "One of the huge benefits to designing circuit boards with code is that it unlocks modularity. As in software, this modularity means you can package up and reuse modules other's have developed and tested."
-icon: 'package'
+icon: 'box'
 ---
 
 # 4. Packages
