--- a/atopile/essentials/5-layout.mdx
+++ b/atopile/essentials/5-layout.mdx
@@ -1,7 +1,7 @@
 ---
 title: '5. Layout'
 description: "`ato` code defines the function of the circuit via how everything is connected up. Unlike a software compiler, these components all need to end up placed somewhere and copper traces need to be routed between the elements for the circuit to function."
-icon: 'layers'
+icon: 'arrows-split-up-and-left'
 ---
 
 # 5. Layout
@@ -51,8 +51,8 @@ To reuse a layout from a module:
 - select the group you want to sync, and hit the "Pull" (Down arrow) button to pull the layout from the module's KiCAD layout file
 
 <video autoplay loop muted playsinline>
-    <source src="/tutorial/assets/5-pcb-layout-sync.mp4" type="video/mp4">
-    <img src="/tutorial/assets/5-pcb-layout-sync.gif" alt="Animated fallback">
+    <source src="/tutorial/assets/5-pcb-layout-sync.mp4" type="video/mp4" />
+    <img src="/tutorial/assets/5-pcb-layout-sync.gif" alt="Animated fallback" />
 </video>
 
 !!! info "Under the hood :wrench:"
