--- a/atopile/guides/faebryk.mdx
+++ b/atopile/guides/faebryk.mdx
@@ -1,3 +1,9 @@
+---
+title: 'faebryk'
+description: faebryk is atopile's kernel. It's how we model the world.
+icon: 'heart'
+---
+
 # `faebryk` & `fabll` 🐍
 
 `faebryk` is atopile's core. It's how we model the world.
@@ -19,6 +25,6 @@ When you run `ato build`, atopile will automatically build the `fabll` module an
 
 You can just import `fabll` modules in `ato` like any other import:
 
-```ato
-from path/to/some/fabll.py import SomeModule
+```python
+from "path/to/some/fabll.py" import SomeModule
 ```
