--- a/atopile/essentials/6-saving-your-work.mdx
+++ b/atopile/essentials/6-saving-your-work.mdx
@@ -1,7 +1,7 @@
 ---
 title: '6. Saving Your Work'
 description: 'atopile strongly recommends using `git` for version control.'
-icon: 'save'
+icon: 'github'
 ---
 
 # 6. Saving Your Work
