--- a/atopile/guides/development.mdx
+++ b/atopile/guides/development.mdx
@@ -1,6 +1,7 @@
 ---
-title: 'Development'
+title: 'development'
 description: 'How to set up your development environment for atopile.'
+icon: 'wrench'
 ---
 
 ## Prerequisites
