Ready to rumble

--- a/atopile/guides/development.mdx
+++ b/atopile/guides/development.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'development'
+title: 'Development'
 description: 'How to set up your development environment for atopile.'
 icon: 'wrench'
 ---
