OSx -> macOS plus don't get too clever with installs

--- a/atopile/essentials/1-the-ato-language.mdx
+++ b/atopile/essentials/1-the-ato-language.mdx
@@ -74,7 +74,7 @@ How about we don't do that again.
 
 ### Units
 
-Resistors's resistances must be a resistance; whether `1.23Ω` (option+Z on OSx), `1.23ohm`, `4.56Kohm`, `7.89Mohm` or similar.
+Resistors's resistances must be a resistance; whether `1.23Ω` (option+Z on macOS), `1.23ohm`, `4.56Kohm`, `7.89Mohm` or similar.
 
 Any attribute of any block may have a unit attached written (without a space) after any number.
 
