--- a/atopile/quickstart.mdx
+++ b/atopile/quickstart.mdx
@@ -31,7 +31,7 @@ We also strongly recommend installing the [atopile VSCode/Cursor extension](http
 
 ## Installing KiCAD
 
-If you are on OSx, and you have `brew` installed, you can install KiCAD with:
+If you are on macOS, and you have `brew` installed, you can install KiCAD with:
 
 ``` sh
 brew install kicad
