--- a/snippets/atopile/guides/quick-install.mdx
+++ b/snippets/atopile/guides/quick-install.mdx
@@ -1,15 +1,11 @@
 <CodeGroup>
 
-```sh OSx
+```sh macOS
 brew install atopile/tap/atopile
 ```
 
-```sh Ubuntu
-curl -LsSf https://astral.sh/uv/install.sh | sh && uv tool install atopile
-```
-
-```sh Linux
-curl -LsSf https://astral.sh/uv/install.sh | sh && uv tool install atopile
+```sh other
+# See install guide 👇
 ```
 
 </CodeGroup>
