Fix all broken links

--- a/atopile/essentials/3-create-component.mdx
+++ b/atopile/essentials/3-create-component.mdx
@@ -22,7 +22,7 @@ You'll be prompted for a search term of a component. This may be:
 Enter `C7426` and press enter.
 
 <Frame caption="ato create component search">
-  <img src="/assets/ato-create-component-search.png" alt="ato create component search prompt" />
+  <img src="./assets/ato-create-component-search.png" alt="ato create component search prompt" />
 </Frame>
 
 Go ahead and tap `Enter` through the default options.
