--- a/atopile/essentials/5-layout.mdx
+++ b/atopile/essentials/5-layout.mdx
@@ -32,7 +32,7 @@ The plugin is installed automatically when you run the `ato` CLI, but in case so
 
 ## Start with existing modules
 
-If you import the rp2040 module we installed in the [previous chapter](4-packages.md), you can reuse its layout.
+If you import the `rp2040` module we installed in the [previous chapter](./4-packages), you can reuse its layout.
 
 ```ato
 from "rp2040/RP2040Kit.ato" import RP2040Kit
@@ -51,8 +51,8 @@ To reuse a layout from a module:
 - select the group you want to sync, and hit the "Pull" (Down arrow) button to pull the layout from the module's KiCAD layout file
 
 <video autoplay loop muted playsinline>
-    <source src="/tutorial/assets/5-pcb-layout-sync.mp4" type="video/mp4" />
-    <img src="/tutorial/assets/5-pcb-layout-sync.gif" alt="Animated fallback" />
+    <source src="./assets/5-pcb-layout-sync.mp4" type="video/mp4" />
+    <img src="./assets/5-pcb-layout-sync.gif" alt="Animated fallback" />
 </video>
 
 !!! info "Under the hood :wrench:"
