--- a/atopile/guides/development.mdx
+++ b/atopile/guides/development.mdx
@@ -6,7 +6,7 @@ icon: 'wrench'
 
 ## Prerequisites
 
-- [Editable atopile install](/guides/installation/#editable-installation-best-for-development)
+- [Editable atopile install](./install#editable-installation-best-for-development)
 
 ## Dev Tools
 
@@ -31,7 +31,7 @@ You can start the CLI in debug mode by using the `--debug` flag, eg. `ato --debu
 This will run a [`debugpy`](https://github.com/microsoft/debugpy) server on port `5678` which you can connect to with the VSCode built-in debugger.
 
 <Frame caption="Connect debugger in VSCode">
-  <img src="/assets/images/debugger-vscode.png" alt="connect debugger" />
+  <img src="./images/debugger-vscode.png" alt="connect debugger" />
 </Frame>
 
 <Tip title="Syntax highlighting isn't working">
