--- a/atopile/quickstart.mdx
+++ b/atopile/quickstart.mdx
@@ -14,7 +14,7 @@ import QuickstartInstall from '/snippets/atopile/guides/quick-install.mdx';
     Windows isn't yet natively supported. You can install atopile via WSL or Docker using ubuntu 24.04.
 </Warning>
 
-See the [installation guide](guides/installation) for more details.
+See the [installation guide](./guides/install) for more details.
 
 
 ## Editor recommendations
@@ -27,7 +27,7 @@ Download it here: https://www.cursor.com/
 
 We also strongly recommend installing the [atopile VSCode/Cursor extension](https://marketplace.visualstudio.com/items?itemName=atopile.atopile). It provides syntax highlighting and some LSP support.
 
-![atopile extension](/atopile/images/vscode-plugin.png)
+![atopile extension](./images/vscode-plugin.png)
 
 ## Installing KiCAD
 
@@ -138,4 +138,4 @@ This isn't even a circuit yet, merely a single component however you now:
 - Know how to add components to your design
 - Have KiCAD installed and working
 
-In the [tutorial](tutorial/1-the-ato-language.md) we continue with a real circuit, installing and using packages, maths and version control.
+In the [tutorial](./essentials/1-the-ato-language) we continue with a real circuit, installing and using packages, maths and version control.
