Scaffolding for HiL suite docs

--- a/hil/atopilled.mdx
+++ b/hil/atopilled.mdx
@@ -1,6 +1,6 @@
 ---
-title: How to win
-description: A mental model for hardware testing
+title: Get atopilled
+description: How to win at hardware testing
 icon: trophy
 ---
 
