--- a/hil/introduction.mdx
+++ b/hil/introduction.mdx
@@ -4,7 +4,20 @@ description: Hardware test with immaculate vibes
 icon: rocket
 ---
 
-## Features ✨
+<CardGroup cols={2}>
+    <Card title="Hardware" icon="bolt">
+        Sense, sniff, control, communicate, measure and more. We've got you covered.
+    </Card>
+    <Card title="Drivers" icon="code">
+        Drivers come out of the box. Make talking to your hardware easy.
+    </Card>
+    <Card title="Framework" icon="cubes">
+        Tools atop pytest let you script up your tests in python in minutes.
+    </Card>
+    <Card title="Distribution (alpha)" icon="paper-plane">
+        Remotely run tests on any hardware from anywhere.
+    </Card>
+</CardGroup>
 
 ### Hardware Blocks 🧱
 
@@ -31,16 +44,3 @@ async def test_performance(hil: "Hil"):
 Running tests will also automatically generate an [interactive report](/assets/hil/test-report/test-report.html) which includes interactive plots of the measured data.
 
 ![](./images/test-report-snapshot.png)
-
-### Test Distribution 🚀
-
-Managing HiL setups is typically a pain. Instead, simply mark your tests with the requirements of the hardware they need to run on, and invoke them normally - the orchestration will automatically send it to an appropriate setup to run it for you with the click of a button
-
-```python
-@pytest.mark.runs_on(hostname="chunky-otter")
-```
-
-<video autoplay loop muted playsinline>
-    <source src="./images/run-test-vscode.mp4" type="video/mp4" />
-    <img src="./images/run-test-vscode.gif" />
-</video>
