md -> mdx callout translation

--- a/atopile/guides/install.mdx
+++ b/atopile/guides/install.mdx
@@ -29,9 +29,11 @@ brew install atopile/tap/atopile
     uv tool install atopile
     ```
 
-    !!! important
+    <Warning>
         `uv` if this is the first time you've used `uv` for a tool install, it might give you another command to run to finish setup.
+
         Do it.
+    </Warning>
 
 3. Check `ato` is installed
 
