--- a/atopile/guides/faebryk.mdx
+++ b/atopile/guides/faebryk.mdx
@@ -12,8 +12,9 @@ icon: 'heart'
 
 `fabll` is a Python framework to model circuits, much like `ato`. It unlocks a the whole Turing-complete power of Python to do design in + low-level procedural code and logic. Think of it like writing C for a Python module. It's focus is power - not ease of use like `ato`, so it's not recommended for most designs to start with.
 
-!!! warning
+<Warning>
     `fabll` is currently in a very early stage of development. It's not publicly supported yet.
+</Warning>
 
 ## Building `fabll` code
 
