--- a/atopile/essentials/1-the-ato-language.mdx
+++ b/atopile/essentials/1-the-ato-language.mdx
@@ -4,8 +4,6 @@ description: "`ato` is a domain specific language (DSL) for describing electroni
 icon: 'atom'
 ---
 
-# 1. Basics of the `ato` language
-
 `ato` is a domain specific language (DSL) for describing electronic circuit boards.
 
 It's heavily inspired by, and attempts to largely follow the syntax of Python 🐍 for consistency and familiarity.
@@ -41,8 +39,9 @@ module Test:
     subclassed_module.gnd ~ gnd
 ```
 
-!!! info
+<Note>
     You can subclass a `module` as a `component`, but not the other way around. A component is expected to represent a specific component.
+</Note>
 
 ## Configuring blocks
 
@@ -165,7 +164,8 @@ Notes on that statement:
 
 The import statements are with respect to the current project (the root of which is where your `ato.yaml` is placed), or within the standard library (`.ato/modules/`)
 
-!!! warning
+<Warning>
     You'll likely see import statements in the form of `import XYZ from "abc.ato"`. This is a legacy syntax and will be removed in the future. Please use the new syntax.
 
     It also doesn't support importing multiple things on the same line.
+</Warning>
