--- a/atopile/essentials/5-layout.mdx
+++ b/atopile/essentials/5-layout.mdx
@@ -4,8 +4,6 @@ description: "`ato` code defines the function of the circuit via how everything 
 icon: 'arrows-split-up-and-left'
 ---
 
-# 5. Layout
-
 `ato` code defines the function of the circuit via how everything is connected up. Unlike a software compiler, these components all need to end up placed somewhere and copper traces need to be routed between the elements for the circuit to function.
 
 This process is typically called "layout".
@@ -55,13 +53,13 @@ To reuse a layout from a module:
     <img src="./assets/5-pcb-layout-sync.gif" alt="Animated fallback" />
 </video>
 
-!!! info "Under the hood :wrench:"
-
+<Note>
     The `ato` compiler will map layouts with a **class or super-class** that **has a build**.
 
     The `RP2040Kit` in the example is the class, and the `ato.yaml` config file in the `rp2040` package means that there's a layout associated with it.
 
     If you want to create a reusable layout for a class of your own, the easiest way is to add a new build config with `ato create build`, and then point the newly created [entry](../reference/config.md#builds.entry) at the module you've made.
+</Note>
 
 ## Layout the remainder of your design
 
