Add links to the into page

--- a/hil/introduction.mdx
+++ b/hil/introduction.mdx
@@ -5,16 +5,16 @@ icon: rocket
 ---
 
 <CardGroup cols={2}>
-    <Card title="Hardware" icon="bolt">
+    <Card title="Hardware" icon="cubes" href="./build/hardware">
         Sense, sniff, control, communicate, measure and more. We've got you covered.
     </Card>
-    <Card title="Drivers" icon="code">
+    <Card title="Drivers" icon="code" href="./build/drivers">
         Drivers come out of the box. Make talking to your hardware easy.
     </Card>
-    <Card title="Framework" icon="cubes">
+    <Card title="Framework" icon="bolt" href="./build/framework">
         Tools atop pytest take you from python script to test report in minutes.
     </Card>
-    <Card title="Distribution (alpha)" icon="paper-plane">
+    <Card title="Distribution (alpha)" icon="paper-plane" href="./build/distribution">
         Remotely run tests on any hardware from anywhere.
     </Card>
 </CardGroup>
